--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,8 @@ TELEGRAM_BOT_TOKEN=your_bot_token_here
 SERIAL_PORT=/dev/cu.usbserial-0001
 SERIAL_BAUD_RATE=9600
 
-# Database Configuration
-# SQLite database file path (created automatically if doesn't exist)
-DATABASE_PATH=data/sensors.db
+# Database Configuration (PostgreSQL)
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/tg_home_sensors
 
 # Logging Configuration
 # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
