--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "pyserial>=3.5",
     "pydantic>=2.0",
     "pydantic-settings>=2.0",
-    "aiosqlite>=0.19",
+    "asyncpg>=0.29",
+    "SQLAlchemy>=2.0",
+    "alembic>=1.13",
 ]
 
 [project.optional-dependencies]
