added mcp server configuration

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,14 @@ DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/tg_home_sensors
 # Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 
+# MCP Server Configuration
+# Keep disabled unless you run src.mcp.main
+MCP_ENABLED=false
+MCP_HOST=127.0.0.1
+MCP_PORT=8081
+MCP_API_KEY=change_me_to_random_secret
+MCP_MAX_HISTORY_DAYS=7
+
 # Default Humidity Thresholds (%)
 # These are defaults for new users (can be customized via bot commands)
 DEFAULT_HUMIDITY_MIN=40.0
