--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,40 @@ services:
       - ./:/app
     env_file:
       - .env
-        #command: sleep 1d
+    command: sleep 1d
     networks:
       - bot-network
     restart: unless-stopped
-    # environment:
-      # DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/tg_home_sensors
-    # restart: unless-stopped
     # Uncomment and adjust for Arduino USB device passthrough
     # devices:
-      # - "${SERIAL_PORT}:${SERIAL_PORT}"
+    #   - "${SERIAL_PORT}:${SERIAL_PORT}"
 
+  mcp:
+    build: .
+    command: ["uv", "run", "python", "-m", "src.mcp.main"]
+    volumes:
+      - ./:/app
+    env_file:
+      - .env
+    environment:
+      MCP_ENABLED: "true"
+      MCP_HOST: "0.0.0.0"
+      MCP_PORT: "8081"
+      MCP_API_KEY: 111111
+    expose:
+      - "8081"
+    networks:
+      - bot-network
+    restart: unless-stopped
+
+  mcp-proxy:
+    image: nginx:1.27-alpine
+    depends_on:
+      - mcp
+    volumes:
+      - ./nginx/mcp.conf:/etc/nginx/conf.d/default.conf:ro
+    ports:
+      - "${MCP_PORT:-8081}:8081"
+    networks:
+      - bot-network
+    restart: unless-stopped
