--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "asyncpg>=0.29",
     "SQLAlchemy>=2.0",
     "alembic>=1.13",
+    "mcp>=1.26.0",
 ]
 
 [project.optional-dependencies]
